# ORK-NEW

./: .gitignore  CMakeLists.txt  LICENSE  README.ko.md  README.md  USAGE.md
config/: cff_only.conf  const_only.conf  example.conf  no_const.conf  no_instrsub.conf
include/Obfuscation/: Config.h  ConstantObfuscation.h  ControlFlowFlattening.h  InstructionSplitting.h  InstructionSubstitution.h  Relocation.h  StringEncryption.h  SymbolStripping.h
integration/ndk/: install.sh  ork-new-ndk-toolchain.cmake
integration/xcode/: ORK-NEW.xcconfig  install.sh
lib/: Config.cpp  ConstantObfuscation.cpp  ControlFlowFlattening.cpp  InstructionSplitting.cpp  InstructionSubstitution.cpp  Registration.cpp  Relocation.cpp  StringEncryption.cpp  SymbolStripping.cpp
runtime/: kld_runtime.c
test/: bench.c  test.c
